--- a/LANDING-PAGE/style.css
+++ b/LANDING-PAGE/style.css
@@ -139,6 +139,15 @@
   background: linear-gradient(92.67deg, #45b6bf 37.84%, #7e57ff 88.43%);
 }
 
+.number-box {
+  background-color: pink;
+  width: 50px;
+  height: 50px;
+  font-weight: bold;
+  color: rgb(255, 104, 129);
+  padding: 13px 0px;
+}
+
 /* small devices (landscape phones, 576px and up) */
 @media (min-width: 300px) {
   .slogan {
